add password strength meter
- visual strength indicator with color coding
- scoring system based on length and character variety
- real-time strength evaluation
- responsive strength bar design

--- a/index.html
+++ b/index.html
@@ -47,6 +47,14 @@
                     <input type="text" id="password" readonly placeholder="Generated password will appear here">
                     <button id="copy">Copy</button>
                 </div>
+                
+                <div class="strength-meter">
+                    <div class="strength-label">Password Strength:</div>
+                    <div class="strength-bar">
+                        <div class="strength-fill" id="strength-fill"></div>
+                    </div>
+                    <div class="strength-text" id="strength-text">Generate a password to see strength</div>
+                </div>
             </div>
         </main>
     </div>
